--- a/index.html
+++ b/index.html
@@ -12,128 +12,120 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
+            background: #0a0a0a;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 20px;
-            color: #333;
+            padding: 24px;
+            color: #e5e5e5;
+            line-height: 1.5;
         }
 
         .container {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 40px;
+            background: #111111;
+            border: 1px solid #262626;
+            border-radius: 8px;
+            padding: 48px;
             width: 100%;
-            max-width: 800px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-
-        .container:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+            max-width: 640px;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
         }
 
         h1 {
             text-align: center;
-            margin-bottom: 10px;
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            font-size: 2.5rem;
-            font-weight: 700;
-            letter-spacing: -1px;
+            margin-bottom: 8px;
+            color: #f5f5f5;
+            font-size: 2rem;
+            font-weight: 600;
+            letter-spacing: -0.025em;
         }
 
         .subtitle {
             text-align: center;
-            color: #666;
-            margin-bottom: 40px;
-            font-size: 1.1rem;
-            opacity: 0.8;
+            color: #a3a3a3;
+            margin-bottom: 48px;
+            font-size: 0.95rem;
+            font-weight: 400;
         }
 
         .input-section {
-            margin-bottom: 30px;
+            margin-bottom: 24px;
         }
 
         .char-counter {
             text-align: right;
-            font-size: 0.9rem;
-            color: #888;
-            margin-bottom: 10px;
-            transition: color 0.3s ease;
+            font-size: 0.85rem;
+            color: #737373;
+            margin-bottom: 8px;
+            font-weight: 400;
         }
 
         .char-counter.warning {
-            color: #ff6b6b;
+            color: #f87171;
         }
 
         textarea {
             width: 100%;
-            min-height: 200px;
-            padding: 20px;
-            border: 2px solid #e1e5e9;
-            border-radius: 12px;
-            font-size: 1rem;
+            min-height: 160px;
+            padding: 16px;
+            border: 1px solid #404040;
+            border-radius: 6px;
+            font-size: 0.95rem;
             line-height: 1.6;
             resize: vertical;
-            transition: all 0.3s ease;
-            background: #fafbfc;
+            transition: border-color 0.2s ease;
+            background: #1a1a1a;
             font-family: inherit;
+            color: #e5e5e5;
         }
 
         textarea:focus {
             outline: none;
-            border-color: #667eea;
-            background: #fff;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #60a5fa;
+            box-shadow: 0 0 0 3px rgba(96, 165, 250, 0.1);
+        }
+
+        textarea::placeholder {
+            color: #737373;
         }
 
         .button-container {
             text-align: center;
-            margin: 30px 0;
+            margin: 32px 0;
         }
 
         button {
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
+            background: #f5f5f5;
+            color: #0a0a0a;
             border: none;
-            padding: 15px 40px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            border-radius: 50px;
+            padding: 12px 24px;
+            font-size: 0.9rem;
+            font-weight: 500;
+            border-radius: 6px;
             cursor: pointer;
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
+            transition: background-color 0.2s ease;
+            font-family: inherit;
         }
 
         button:hover:not(:disabled) {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
-        }
-
-        button:active {
-            transform: translateY(0);
+            background: #e5e5e5;
         }
 
         button:disabled {
-            opacity: 0.6;
+            background: #404040;
             cursor: not-allowed;
-            transform: none;
+            color: #737373;
         }
 
         .loading {
             display: none;
             align-items: center;
             justify-content: center;
-            margin: 20px 0;
+            margin: 24px 0;
+            color: #a3a3a3;
+            font-size: 0.9rem;
         }
 
         .loading.active {
@@ -141,13 +133,13 @@
         }
 
         .spinner {
-            width: 24px;
-            height: 24px;
-            border: 3px solid #e1e5e9;
-            border-top: 3px solid #667eea;
+            width: 16px;
+            height: 16px;
+            border: 2px solid #404040;
+            border-top: 2px solid #60a5fa;
             border-radius: 50%;
             animation: spin 1s linear infinite;
-            margin-right: 10px;
+            margin-right: 8px;
         }
 
         @keyframes spin {
@@ -156,81 +148,88 @@
         }
 
         .results {
-            background: #f8f9fa;
-            border-radius: 12px;
-            padding: 25px;
-            margin-top: 30px;
-            border-left: 4px solid #667eea;
+            background: #1a1a1a;
+            border: 1px solid #404040;
+            border-radius: 6px;
+            padding: 20px;
+            margin-top: 24px;
             display: none;
-            animation: fadeIn 0.5s ease;
         }
 
         .results.active {
             display: block;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
         .results h3 {
-            color: #333;
-            margin-bottom: 15px;
-            font-size: 1.3rem;
+            color: #f5f5f5;
+            margin-bottom: 12px;
+            font-size: 1rem;
+            font-weight: 600;
         }
 
         .corrected-text {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            border: 1px solid #e1e5e9;
+            background: #0a0a0a;
+            padding: 16px;
+            border: 1px solid #262626;
+            border-radius: 4px;
             line-height: 1.6;
             white-space: pre-wrap;
             font-family: inherit;
+            font-size: 0.95rem;
+            color: #e5e5e5;
         }
 
         .error {
-            background: #fee;
-            border-left-color: #ff6b6b;
-            color: #c53030;
+            background: #1c1917;
+            border-color: #991b1b;
+        }
+
+        .error .corrected-text {
+            background: #1c1917;
+            color: #fca5a5;
+            border-color: #991b1b;
         }
 
         .footer {
             text-align: center;
-            margin-top: 40px;
-            color: #888;
-            font-size: 0.9rem;
+            margin-top: 48px;
+            color: #737373;
+            font-size: 0.85rem;
         }
 
         .footer a {
-            color: #667eea;
+            color: #a3a3a3;
             text-decoration: none;
-            font-weight: 500;
+            font-weight: 400;
         }
 
         .footer a:hover {
-            text-decoration: underline;
+            color: #f5f5f5;
         }
 
         @media (max-width: 768px) {
             .container {
-                padding: 30px 20px;
-                margin: 10px;
+                padding: 32px 24px;
+                margin: 16px;
             }
 
             h1 {
-                font-size: 2rem;
+                font-size: 1.75rem;
             }
 
             textarea {
-                min-height: 150px;
-                padding: 15px;
+                min-height: 140px;
+                padding: 12px;
+                font-size: 0.9rem;
             }
 
             button {
-                padding: 12px 30px;
-                font-size: 1rem;
+                padding: 10px 20px;
+                font-size: 0.85rem;
+            }
+
+            .footer {
+                margin-top: 32px;
             }
         }
     </style>
@@ -238,37 +237,35 @@
 <body>
     <div class="container">
         <h1>Grammar Checker</h1>
-        <p class="subtitle">Advanced AI grammar correction using specialized T5 models</p>
+        <p class="subtitle">Correct grammar with AI</p>
 
         <div class="input-section">
             <div class="char-counter" id="charCounter">0 / 300 words</div>
             <textarea 
                 id="textInput" 
-                placeholder="Paste your text here (up to 300 words) and get instant grammar corrections..."
+                placeholder="Enter your text here..."
                 maxlength="2000"
             ></textarea>
         </div>
 
         <div class="button-container">
             <button id="checkBtn" onclick="checkGrammar()">
-                ✨ Check Grammar
+                Check Grammar
             </button>
         </div>
 
         <div class="loading" id="loading">
             <div class="spinner"></div>
-            <span>Analyzing your text...</span>
+            <span>Checking...</span>
         </div>
 
         <div class="results" id="results">
-            <h3>✅ Corrected Text</h3>
+            <h3>Corrected Text</h3>
             <div class="corrected-text" id="correctedText"></div>
         </div>
 
         <div class="footer">
-            <p>Powered by <a href="https://huggingface.co" target="_blank">🤗 Hugging Face</a> | 
-            <a href="https://github.com" target="_blank">GitHub Pages</a> | 
-            <span style="color: #28a745;">✓ No API Key Required</span></p>
+            <p>Powered by <a href="https://huggingface.co" target="_blank">Hugging Face</a></p>
         </div>
     </div>
 
